<resources>
    <string name="app_name">PlaceHolder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_event_name">Event Title</string>
    <string name="enter_event_location">Location</string>
    <string name="enter_event_date">Date</string>
    <string name="enter_event_time">Time</string>
    <string name="enter_event_capacity">Event Capacity</string>
    <string name="enter_event_description">Description</string>
    <string name="event_example_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet at dui eget ultricies. Donec at lectus ultrices ipsum convallis aliquam. Aliquam vel sapien semper, posuere ligula eu, condimentum augue. Mauris tristique quam a nunc congue, eu elementum metus ullamcorper. Suspendisse rutrum dolor quis neque posuere maximus. Nunc varius diam vitae enim sagittis pharetra. Praesent id augue interdum, suscipit ipsum at, facilisis risus. Donec pellentesque dolor risus, in laoreet lorem bibendum et. Donec dapibus aliquam efficitur. Curabitur a elit semper, efficitur metus at, aliquet augue. Donec id lacus sit amet odio scelerisque consequat ac in arcu. Aliquam sed sapien sit amet dui porta pellentesque nec at nisl.

Donec maximus lectus aliquet sapien aliquet rutrum. Fusce vulputate, odio at interdum condimentum, sem augue posuere turpis, non euismod dui sem quis eros. Maecenas sed enim ante. Quisque feugiat urna nec mauris maximus iaculis. Suspendisse sed arcu vel odio iaculis ullamcorper. Donec nec sem rutrum, faucibus felis ac, vulputate libero. Maecenas facilisis ac est vel consectetur. Nullam facilisis consequat consequat. Vestibulum dictum mi vel risus tincidunt, vel ultrices ante consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla bibendum ac sem sit amet congue. Praesent fringilla euismod vestibulum.</string>

    <string name="cameraButtonText">Take picture of QR code</string>
    <string name="title_profile_edit_activity">Profile</string>
    <string name="title_enter_event_details_activity">Enter Event Details Activity</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer\n</string>
    <string name="attendee_name">Name</string>
    <string name="back_button">back button</string>
    <string name="channel_name">default_channel</string>
    <string name="channel_description">the default channel for all notifications</string>
</resources>